# mxcontrol

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  aux.c  aux.h  main.c  udev.c  usb.c
cmake/: Findlibudev.cmake
scripts/: all-up.sh  bk-down.sh  fw-down.sh  thumb-down.sh
src/: CMakeLists.txt  main.c
systemd/: mxcontrol.service
udev/: 10-logitech-hidraw-permissions.rules
